--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> My Portfolio</title>
+    <meta name="description" content="This is my portfolio. I'm Senior Data Analyst & AI & Full Stack Developer.">
+    <title>SCS-Portfolio (Senior Data Analyst & AI & Full Stack Developer)</title>
     <link rel="shortcut icon" href="./assets/images/user/JT.png">
+    <link rel="canonical" href="http://github.com/Supercometstar" />
     <link rel="stylesheet" href="./assets/css/hero.css">
     <link rel="stylesheet" href="./assets/css/portfolio.css">
     <link rel="stylesheet" href="./assets/css/w3.css">
