update - v1.4: remove multiple viewport

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +21,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
@@ -35,7 +35,7 @@
     <!-- navigation menu -->
     <nav style="width: 100%; position: fixed; z-index: 300;">
         <div class="navbar">            
-            <div class="logo"><a href="#">Akira Nakamura</a></div>
+            <h1 class="logo"><a href="#">Akira Nakamura</a></h1>
             <ul class="menu" style='margin-bottom: 0px;'>
                 <li class= "li"><a onclick="navTo('home')">Home</a></li>
                 <li class= "li"><a onclick="navTo('about')">About</a></li>
@@ -534,7 +534,6 @@
     <div class="isotope-pager" style="padding-top: 15px; text-align:center; position: relative; z-index: 3;"></div>
 
     <!-- POKEMON START -->
-    <h5>  </h5>
     <br class="br"/>
     <div id="certificates">
         <main id=app>
