--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is my portfolio. I'm Senior Data Analyst & AI & Full Stack Developer.">
-    <title>SCS-Portfolio (Senior Data Analyst & AI & Full Stack Developer)</title>
+    <meta name="description" content="This is my portfolio. I'm Senior Full-stack, Game, AI Development.">
+    <title>SCS-Portfolio (Senior Full-stack, Game, AI Development)</title>
     <link rel="shortcut icon" href="./assets/images/user/JT.png">
     <link rel="canonical" href="http://github.com/Supercometstar" />
     <link rel="stylesheet" href="./assets/css/hero.css">
@@ -61,11 +61,11 @@
                 <div class="text-two">       
                     <div class="text-three">Hi, Nice to meet you</div>  <br/>
                     <h4 class="span loader">
-                        <span class='m'>Senior Data Analyst & AI & Full Stack Developer</span>
+                        <span class='m'>Senior Full-stack, Game, AI Development</span>
                         <br class="br"/>
                     </h4><br/> 
                 </div>
-                <div class="text-four">Specialized in Data Analysis | AI | Full-Stack Development</div>
+                <div class="text-four">Specialized in Game | Full-Stack | AI Development</div>
             </div>
         </div>
     </section>
@@ -77,7 +77,7 @@
             <img data-src="./assets/images/user/JT.png" class="avatar lazy" style="min-height: 300px; min-width: 300px; margin: 10px;"/>
         </div>
         <div class="w3-col l7 description">
-           <h3>Seasoned Data Analyst, AI Specialist with over a 3 years of experience in data processing and analysis, mornitoring, networking. Possessed a unique blend of both user-friendly front-end and robust back-end development skills. With a solid foundation in programming languages such as JavaScript, Python, and Go, C++, and a deep understanding of software development principles and best practices. Passionated about creating innovative and efficient solutions to complex problems.</h3>
+           <h3>Proficient Full Stack Developer with 3+ years of experience developing scalable web applications using JavaScript, React, Node.js, and MongoDB, including game engineering. Worked at FOURDIGIT for 1 year and Rikkeisoft for 2 years, gaining experience in developing innovative solutions for clients in various industries. Specializes in Full-stack development, with a successful track record of delivering high-quality AI solutions within tight timelines. Passionate about keeping up with the latest technology trends and recognized by peers as a quick learner and problem solver.</h3>
         </div>
     </div><br/><br/>
     <!-- My Skill Section -->
@@ -93,7 +93,7 @@
         <div class="content pre-loader">
             <div class="boxes shape">
                 <div class="box circle">
-                    <div class="topic">Data Analyst</div>
+                    <div class="topic">Full-stack<br/>Dev</div>
                     <div class="green">
                         <div class="progress">
                         <div class="inner">
@@ -105,11 +105,11 @@
                     </div>
                 </div>
                 <div class="box circle">
-                    <div class="topic">Data Visualization</div>
+                    <div class="topic">Game<br/>Dev</div>
                     <div class="green">
                         <div class="progress">
                             <div class="inner">
-                                <div class="percent"><span>&nbsp;&nbsp;95</span>%</div>
+                                <div class="percent"><span>&nbsp;&nbsp;90</span>%</div>
                                 <div class="water"></div>
                                 <div class="glare"></div>
                             </div>
@@ -117,11 +117,11 @@
                     </div>
                 </div>
                 <div class="box circle">
-                    <div class="topic">Deep Learning</div>
+                    <div class="topic">AI<br/>Dev</div>
                     <div class="green">
                         <div class="progress">
                             <div class="inner">
-                                <div class="percent"><span>&nbsp;&nbsp;95</span>%</div>
+                                <div class="percent"><span>&nbsp;&nbsp;75</span>%</div>
                                 <div class="water"></div>
                                 <div class="glare"></div>
                             </div>
@@ -135,7 +135,7 @@
                     <div class="orange">
                         <div class="progress">
                         <div class="inner">
-                            <div class="percent"><span>&nbsp;&nbsp;90</span>%</div>
+                            <div class="percent"><span>&nbsp;&nbsp;98</span>%</div>
                             <div class="water"></div>
                             <div class="glare"></div>
                         </div>
@@ -147,7 +147,7 @@
                     <div class="green">
                         <div class="progress">
                             <div class="inner">
-                                <div class="percent"><span>&nbsp;&nbsp;85</span>%</div>
+                                <div class="percent"><span>&nbsp;&nbsp;90</span>%</div>
                                 <div class="water"></div>
                                 <div class="glare"></div>
                             </div>
@@ -155,11 +155,11 @@
                     </div>
                 </div>
                 <div class="box circle">
-                    <div class="topic">Reinforcement Learning</div>
+                    <div class="topic">RL</div>
                     <div class="green">
                         <div class="progress">
                             <div class="inner">
-                                <div class="percent"><span>&nbsp;&nbsp;85</span>%</div>
+                                <div class="percent"><span>&nbsp;&nbsp;80</span>%</div>
                                 <div class="water"></div>
                                 <div class="glare"></div>
                             </div>
@@ -177,19 +177,17 @@
             <div class="portfolio-item">
                 <div class="item-desc">      
                     <h2 class="animate one">
-                        <span>D</span><span>a</span><span>t</span><span>a</span><span>A</span><span>n</span><span>a</span><span>l</span><span>y</span><span>s</span><span>i</span><span>s</span>
+                        <span>G</span><span>a</span><span>m</span><span>e</span>
                         <span>D</span><span>e</span><span>v</span><span>e</span><span>l</span><span>o</span><span>p</span><span>m</span><span>e</span><span>n</span><span>t</span>
                     </h2>
                     <p>
-                        I have been working as a Data Analyst for 4 years.<br/>
-                        Mostly work as a Time Seris Anayst, Data Forecaster for Marketing<br/>
-                        - TimeSeris Analysis<br/>
-                        - Data Forecasting<br/>
-                        - DB Management<br/>
-                        - Data Ming<br/>
-                        - ELK<br/>
-                        - Cryptography<br/>
-                        - Golang, Rust<br/>
+                        I have been working as a Game Developer for 1 years.<br/>
+                        Mostly work as a HTML-Game, Realtime-Game<br/>
+                        - HTML-Game<br/>
+                        - Real-Time<br/>
+                        - Turn-Based<br/>
+                        - Realtime-Strategy<br/>
+                        - Single-Player<br/>
                     </p>
                     <a onClick="showWork('blockchain')" title="Data Analysis">View Work</a>
         
@@ -211,18 +209,16 @@
             <div class="portfolio-item">    
                 <div class="item-desc"> 
                 <h2 class="animate two">
-                    <span>W</span><span>e</span><span>b</span><span>&nbsp;</span><span>D</span><span>e</span><span>v</span><span>e</span><span>l</span><span>o</span><span>p</span><span>m</span><span>e</span><span>n</span><span>t</span>
+                    <span>F</span><span>u</span><span>l</span><span>l</span><span>-</span><span>S</span><span>t</span><span>a</span><span>c</span><span>k</span><span>&nbsp;</span><span>D</span><span>e</span><span>v</span><span>e</span><span>l</span><span>o</span><span>p</span><span>m</span><span>e</span><span>n</span><span>t</span>
                 </h2>
                 <p>
-                    6 years of experience in Web development. <br/>
-                    - Strong HTML + CSS, SCSS, Tailwind CSS, TypeScript<br/>
-                    - Node.js, Express, FastAPI, Nest<br/>
+                    3 years of experience in Web development. <br/>
+                    - Strong HTML + CSS + JavaScript, Mui, Antd, TailwindCSS<br/>
+                    - Node.js, Express, FastAPI, Flask<br/>
                     - React, Next.js, Redux, React Hooks, React Native<br/>
-                    - Apollo, GraphQL, Firebase<br/>
-                    - MongoDB, mongoose, postgreSQL, MySQL<br/>
+                    - MongoDB, postgreSQL, MySQL, Firestore<br/>
                     - Socket programming, socket.io, websocket<br/>
                     - AWS services, Azure, Google cloud<br/>
-                    - CI/CD, Git, Docker, Kubernetes, Jenkins<br/>
                 </p>
                 <a onClick="showWork('website')" title="Website Development">View Work</a>
         
@@ -261,11 +257,11 @@
                             <div class="bg" style="background-image: url(./assets/images/blockchain.jpg);"></div>
                             <div class="overlay"></div>
                             <div class="inner">
-                                <h2>Data Analysis</h2>
+                                <h2>Game Development</h2>
                                 <ul>
-                                    <li>TimeSeris Analysis</li>
-                                    <li>Data Forecasting</li>
-                                    <li>Data Management</li>
+                                    <li>HTML5 Game</li>
+                                    <li>Real-time Game</li>
+                                    <li>Turn-based Game</li>
                                 </ul>
                             </div>
                         </div>
@@ -287,7 +283,7 @@
                                         </g>
                                     </svg>
                                 </div>
-                                <p>ELK&nbsp;&nbsp;&nbsp; SQL<br/> PostgreSQL&nbsp;&nbsp;&nbsp; Market Trading<br/> Mining&nbsp;&nbsp;&nbsp; DBMS</p>
+                                <p>HTML&nbsp;&nbsp;&nbsp; CSS<br/> JavaScript&nbsp;&nbsp;&nbsp; Python<br/> Turnbase&nbsp;&nbsp;&nbsp; Realtime</p>
                             </div>
                         </div>
                     </div>
@@ -338,12 +334,11 @@
                             <div class="bg" style="background-image: url(./assets/images/frontend.png);"></div>
                             <div class="overlay"></div>
                             <div class="inner">
-                                <h2> DevOps </h2>
+                                <h2> AI Development </h2>
                                 <ul>
-                                    <li>CI/CD</li><br/>
-                                    <li>Cloud Services</li><br/>
-                                    <li>Version Control</li><br/>
-                                    <li>Containerization and Orchestration</li>
+                                    <li>Machine Learning</li><br/>
+                                    <li>Deep Learning</li><br/>
+                                    <li>Reinforcement Learning</li><br/>
                                 </ul>
                             </div>
                         </div>
@@ -365,7 +360,7 @@
                                 </g>
                             </svg>
                             </div>
-                            <p>JenKins<br/> AWS&nbsp;&nbsp;&nbsp; Google Cloud&nbsp;&nbsp;&nbsp; Azure<br/> Git&nbsp;&nbsp;&nbsp; GitHub&nbsp;&nbsp;&nbsp; GitLab<br/>Docker&nbsp;&nbsp;&nbsp; Kubernetes</p>
+                            <p>RNN&nbsp;&nbsp;&nbsp;CNN<br/>GPT&nbsp;&nbsp;&nbsp; Vision<br/> TTS&nbsp;&nbsp;&nbsp; STT&nbsp;&nbsp;&nbsp; </p>
                         </div>
                         </div>
                     </div>
@@ -397,8 +392,8 @@
     <div class="filters filter-button-group" style=" position: relative; z-index: 2;">
         <ul>
             <li class="active"><a href="javascript:void(0);" data-filter="*" id="all">All</a></li>
-            <li><a href="javascript:void(0);" data-filter="blockchain" id="blockchain">DataAnalysis</a></li>
-            <li><a href="javascript:void(0);" data-filter="website" id="website">Website</a></li>
+            <li><a href="javascript:void(0);" data-filter="blockchain" id="blockchain">Jr. Full-Stack</a></li>
+            <li><a href="javascript:void(0);" data-filter="website" id="website">Sr. Full-Stack</a></li>
         </ul>
     </div>
 	<div id="container" class="isotope" style=" position: relative; z-index: 2; opacity: 0.9;">  
@@ -578,16 +573,17 @@
             </div>
             <div class="w3-col l4  w3-dark-grey">
                 <p><i class="fa fa-telegram w3-xxlarge w3-text-light-grey"></i></p>
-                <p><a href="https://t.me/juggernautdevil" target="_blank" title="Telegram" style="text-decoration: underline; color: white;"> Telegram : @supercometstar
+                <p><a href="https://t.me/Superstrangestar" target="_blank" title="Telegram" style="text-decoration: underline; color: white;"> Telegram : @Superstrangestar
                  </a></p>
             </div>
             <div class="w3-col l4">
                 <p><i class="fa fa-whatsapp w3-xxlarge w3-text-light-grey"></i></p>
-
+                <p><a href="https://wa.me/19472761441" target="_blank" title="WhatsApp" style="text-decoration: underline; color: white;"> WhatsApp : @ +1 (947)276-1441
+                 </a></p>
             </div>
             <div class="w3-col l4  w3-dark-grey">
-                <p><i class="fa fa-slack w3-xxlarge w3-text-light-grey"></i></p>
-                <p><a href="https://join.slack.com/t/sweemworkspace/shared_invite/zt-2jcuu9qkj-Qv4ItQb_ZBpDUjRttS7xeQ" style="text-decoration: underline; color: white;">Slack : supercometstar</a>  </p>
+                <p><i class="fa fa-skype w3-xxlarge w3-text-light-grey"></i></p>
+                <p><a href="https://join.skype.com/invite/pzakUpmUN5Be" style="text-decoration: underline; color: white;">Skype : Supercomet</a>  </p>
             </div>
             <div class="w3-col l4">
                 <p>
@@ -608,14 +604,14 @@
                     219.1c29.67 0 53.31 26.82 52.84 59.24C470.7 310.1 447.5 337.6 417.9 337.6z"></path>
                 </svg>
             </p>
-                <p><a href="#" style="text-decoration: underline; color: white;">Discord ID: supercometstar </a>  </p>
+                <p><a href="https://discord.com/users/1294511868131676193" style="text-decoration: underline; color: white;">Discord ID: supercometstar </a>  </p>
             </div>
         </div>
     </div>
 
     <!-- footer -->
     <div class="footer" style=" position: relative; z-index: 2;">
-        <p class="contact-title"> &copy; Last Updated On May 31 2023 </p>
+        <p class="contact-title"> &copy; Last Updated On Oct 31 2024 </p>
     </div>
 
     <!-- Button -->
