update - v1.6: change style

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                         <br class="br"/>
                     </h4><br/> 
                 </div>
-                <div class="text-four">Specialized in Game | Full-Stack | AI Development</div>
+                <div class="text-four">Graduated university ahead of schedule</div>
             </div>
         </div>
     </section>
@@ -77,19 +77,14 @@
             <img data-src="./assets/images/user/JT.png" class="avatar lazy" style="min-height: 300px; min-width: 300px; margin: 10px;"/>
         </div>
         <div class="w3-col l7 description">
-           <h3>Proficient Full Stack Developer with 3+ years of experience developing scalable web applications using JavaScript, React, Node.js, and MongoDB, including game engineering. Worked at FOURDIGIT for 1 year and Rikkeisoft for 2 years, gaining experience in developing innovative solutions for clients in various industries. Specializes in Full-stack development, with a successful track record of delivering high-quality AI solutions within tight timelines. Passionate about keeping up with the latest technology trends and recognized by peers as a quick learner and problem solver.</h3>
+           <h3>Proficient <span class='highlight gold'>Full Stack Developer</span> with <span class='highlight dodgerblue'>3+ years</span> of experience developing scalable web applications using JavaScript, React, Node.js, and MongoDB, including <span class='highlight gold'>game engineering</span>. Worked at <span class='highlight gray'>FOURDIGIT</span> for <span class='highlight dodgerblue'>1 year</span> and <span class='highlight gray'>Rikkeisoft</span> for <span class='highlight dodgerblue'>2 years</span>, gaining experience in developing innovative solutions for clients in various industries. Specializes in Full-stack development, with a successful track record of delivering high-quality <span class='highlight gold'>AI solutions</span> within tight timelines. Passionate about keeping up with the latest technology trends and recognized by peers as a quick learner and problem solver.</h3>
         </div>
     </div><br/><br/>
     <!-- My Skill Section -->
     <!-- <h1 id="myskills" class="subtitle"> My Skills & Services </h1> -->
-    <section class="skills" style="padding-top: 0px; position: relative; z-index: 2;">
+    <section class="skills" style="padding-top: 0px; position: relative; z-index: 2;display: flex;align-items: center;flex-direction: column;">
         <div id="skills" style="margin-top: -100px; height: 100px;"></div>
-        <section class="skills-bounce">
-            <div class="content">
-                <h2>Skills</h2>
-                <h2>Skills</h2>
-            </div>
-        </section>
+        <h2 class="services" data-text="SKILLS">SKILLS</h2>
         <div class="content pre-loader">
             <div class="boxes shape">
                 <div class="box circle">
@@ -360,7 +355,7 @@
                                 </g>
                             </svg>
                             </div>
-                            <p>RNN&nbsp;&nbsp;&nbsp;CNN<br/>GPT&nbsp;&nbsp;&nbsp; Vision<br/> TTS&nbsp;&nbsp;&nbsp; STT&nbsp;&nbsp;&nbsp; </p>
+                            <p>RNN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CNN<br/>&nbsp;&nbsp;GPT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Vision<br/> TTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; STT </p>
                         </div>
                         </div>
                     </div>
@@ -582,8 +577,8 @@
                  </a></p>
             </div>
             <div class="w3-col l4  w3-dark-grey">
-                <p><i class="fa fa-skype w3-xxlarge w3-text-light-grey"></i></p>
-                <p><a href="https://join.skype.com/invite/pzakUpmUN5Be" style="text-decoration: underline; color: white;">Skype : Supercomet</a>  </p>
+                <p><i class="fa fa-linkedin w3-xxlarge w3-text-light-grey"></i></p>
+                <p><a href="https://linkedin.com/in/supercometstar" style="text-decoration: underline; color: white;">LinkedIn: supercometstar</a>  </p>
             </div>
             <div class="w3-col l4">
                 <p>
