--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1135219534777767" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -56,6 +57,15 @@
     </nav>
     <!-- Hero Section -->
     <section class="home" id="home" style="position: relative; z-index: 2; margin-top: 0px;">
+        <ins className="adsbygoogle"
+         style= "display: block"
+         data-ad-client="ca-pub-XXXXXXXXX"
+         data-ad-slot="XXXXXXXXX"></ins>
+         <ins className="adsbygoogle"
+         style= "display: block"
+         data-ad-client="ca-pub-XXXXXXXXX"
+         data-ad-slot="XXXXXXXXX"></ins>
+         
         <div class="home-content">
             <div>
                 <div class="text-two">       
