--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1135219534777767" crossorigin="anonymous"></script>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
 </head>
 
 <body>
@@ -57,14 +60,9 @@
     </nav>
     <!-- Hero Section -->
     <section class="home" id="home" style="position: relative; z-index: 2; margin-top: 0px;">
-        <ins className="adsbygoogle"
-         style= "display: block"
-         data-ad-client="ca-pub-XXXXXXXXX"
-         data-ad-slot="XXXXXXXXX"></ins>
-         <ins className="adsbygoogle"
-         style= "display: block"
-         data-ad-client="ca-pub-XXXXXXXXX"
-         data-ad-slot="XXXXXXXXX"></ins>
+        <ins className="adsbygoogle" style= "display: block" data-ad-client="ca-pub-XXXXXXXXX" data-ad-slot="XXXXXXXXX"></ins>
+        <ins className="adsbygoogle" style= "display: block" data-ad-client="ca-pub-XXXXXXXXX" data-ad-slot="XXXXXXXXX"></ins>
+        <amp-auto-ads type="adsense" data-ad-client="ca-pub-1135219534777767"></amp-auto-ads>
          
         <div class="home-content">
             <div>
