--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is my portfolio. I'm Senior Full-stack, Game, AI Development.">
+    <meta name="coinzilla" content="d600e0e9c57312e27f25e2dce2ef9f83" />
     <title>SCS-Portfolio (Senior Full-stack, Game, AI Development)</title>
     <link rel="shortcut icon" href="./assets/images/user/JT.png">
     <link rel="canonical" href="http://github.com/Supercometstar" />
@@ -24,10 +25,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1135219534777767" crossorigin="anonymous"></script>
-    <script async custom-element="amp-auto-ads"
-        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-    </script>
 </head>
 
 <body>
@@ -59,11 +56,7 @@
         </div>
     </nav>
     <!-- Hero Section -->
-    <section class="home" id="home" style="position: relative; z-index: 2; margin-top: 0px;">
-        <ins className="adsbygoogle" style= "display: block" data-ad-client="ca-pub-XXXXXXXXX" data-ad-slot="XXXXXXXXX"></ins>
-        <ins className="adsbygoogle" style= "display: block" data-ad-client="ca-pub-XXXXXXXXX" data-ad-slot="XXXXXXXXX"></ins>
-        <amp-auto-ads type="adsense" data-ad-client="ca-pub-1135219534777767"></amp-auto-ads>
-         
+    <section class="home" id="home" style="position: relative; z-index: 2; margin-top: 0px;">         
         <div class="home-content">
             <div>
                 <div class="text-two">       
